ENH Better notebooks

--- a/notebooks/03-model-inspection.ipynb
+++ b/notebooks/03-model-inspection.ipynb
@@ -186,7 +186,7 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "def plot_linear_coef(coefs, names, ax=None, sorted=False):\n",
+    "def plot_linear_coef(coefs, names, ax=None, sorted=True):\n",
     "    if ax is None:\n",
     "        fig, ax = plt.subplots()\n",
     "    coefs = pd.DataFrame(\n",
@@ -201,7 +201,7 @@
     "    ax.axvline(x=0, color='.5')\n",
     "    return ax\n",
     "\n",
-    "plot_linear_coef(ridge['reg'].coef_, names=X_train.columns, sorted=True);"
+    "plot_linear_coef(ridge['reg'].coef_, names=X_train.columns);"
    ]
   },
   {
@@ -275,8 +275,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, ax = plt.subplots()\n",
-    "_ = ax.boxplot(ridge_coefs, vert=False, labels=ridge_coefs.columns)"
+    "sorted_ridge_coefs = ridge_coefs.mean().argsort()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ridge_coefs.iloc[:, sorted_ridge_coefs].boxplot(vert=False);"
    ]
   },
   {
@@ -287,7 +295,17 @@
     "\n",
     "1. Use a `Lasso` to fit the training dataset with `alpha=0.06`. **Hint:** Be sure to use a pipeline.\n",
     "3. Plot `Lasso`'s coefficients next to the `Ridge` coefficients. How do they differ? **Hint** Use `plot_linear_coef`.\n",
-    "3. Use `RepeatedKFold` and `cross_validate` to check the variability of cofficients for `Lasso`."
+    "3. Use `RepeatedKFold` and `cross_validate` to check the variability of cofficients for `Lasso`.\n",
+    "    - **Hint**: Be sure to use `return_estimator=True`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.linear_model import Lasso"
    ]
   },
   {
@@ -405,7 +423,7 @@
     "from sklearn.inspection import permutation_importance\n",
     "\n",
     "rf_perm_results = permutation_importance(rf, X_test, y_test,\n",
-    "                                         n_repeats=5, n_jobs=2)"
+    "                                         n_repeats=5, n_jobs=-1)"
    ]
   },
   {
@@ -650,6 +668,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Accuracy on test data with features removed: {:.2f}\".format(\n",
+    "      rf.score(X_test, y_test)))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -665,7 +693,7 @@
     "from sklearn.inspection import permutation_importance\n",
     "\n",
     "rf_sel_result = permutation_importance(\n",
-    "    rf_sel, X_test_sel, y_test, n_repeats=10, n_jobs=-1)"
+    "    rf_sel, X_test_sel, y_test, n_repeats=30, n_jobs=-1)"
    ]
   },
   {
@@ -726,7 +754,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.inspection import plot_partial_dependence"
+    "from sklearn.inspection import PartialDependenceDisplay"
    ]
   },
   {
@@ -737,10 +765,11 @@
    "source": [
     "top_features = features_sel[:2].tolist()\n",
     "bottom_features = features_sel[-2:].tolist()\n",
-    "plot_partial_dependence(hist, X_train_sel,\n",
-    "                        features=top_features + bottom_features,\n",
-    "                        feature_names=features_sel,\n",
-    "                        n_cols=2)"
+    "PartialDependenceDisplay.from_estimator(\n",
+    "    hist, X_train_sel,\n",
+    "    features=top_features + bottom_features,\n",
+    "    feature_names=features_sel,\n",
+    "    n_cols=2)"
    ]
   },
   {
@@ -751,20 +780,21 @@
    "source": [
     "## Exercise 3\n",
     "\n",
-    "1. Load the boston dataset using `sklearn.datasets.load_boston`.\n",
-    "\n",
-    "```python\n",
-    "from sklearn.datasets import load_boston\n",
-    "boston = load_boston()\n",
-    "```\n",
-    "\n",
+    "1. Load the boston dataset using `fetch_openml` with `data_id=531` and `as_frame=True`\n",
     "1. Split the data into a training and test set.\n",
-    "1. Train a `sklearn.ensemble.GradientBoostingRegressor` on the training set and evalute on the test set.\n",
-    "1. Plot the feature_importances_ uses `plot_importances`. **Hint** The names are given in `boston.feature_names`\n",
-    "1. What are the 4 most important features according to `feature_importances_`?\n",
+    "1. Train a `HistGradientBoostingRegressor` on the training set and evalute on the test set.\n",
     "1. What are the 4 most important features according to permutation importance on the test set?\n",
-    "1. Plot the partial dependence for the 4 most important features according to permutation importance.\n",
-    "1. Plot the partial dependence setting `features=[('LSTAT', 'RM')]` to get a bivariate parital dependence plot."
+    "1. Plot the partial dependence for the 4 most important features according to permutation importance."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.datasets import fetch_openml\n",
+    "from sklearn.ensemble import HistGradientBoostingRegressor"
    ]
   },
   {
