--- a/notebooks/01-model-evaluation.ipynb
+++ b/notebooks/01-model-evaluation.ipynb
@@ -205,9 +205,18 @@
     "# Exercise 1\n",
     "\n",
     "1. Fit a `sklearn.ensemble.RandomForestClassifier` model on the same dataset.\n",
-    "2. Use the `score` method to compute the accuracy.\n",
-    "3. Print the classification report for the random forest.\n",
+    "2. Use the `score` method to compute the accuracy on the test set.\n",
+    "3. Print the classification report for the random forest with the test set.\n",
     "4. Compare the classification report of the random forest to logistic regression. Which one has the better overall preformance?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier"
    ]
   },
   {
@@ -348,8 +357,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.metrics import plot_precision_recall_curve\n",
-    "plot_precision_recall_curve(log_reg, X_test, y_test, name=\"LogisticRegression\")"
+    "from sklearn.metrics import PrecisionRecallDisplay\n",
+    "PrecisionRecallDisplay.from_estimator(\n",
+    "    log_reg, X_test, y_test, name=\"LogisticRegression\")"
    ]
   },
   {
@@ -358,8 +368,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.metrics import plot_roc_curve\n",
-    "plot_roc_curve(log_reg, X_test, y_test, name=\"LogisticRegression\")"
+    "from sklearn.metrics import RocCurveDisplay\n",
+    "RocCurveDisplay.from_estimator(log_reg, X_test, y_test, name=\"LogisticRegression\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Use ax to plot both curves next to each other"
    ]
   },
   {
@@ -369,8 +386,8 @@
    "outputs": [],
    "source": [
     "fig, (ax1, ax2) = plt.subplots(1, 2, figsize=(20, 8))\n",
-    "plot_precision_recall_curve(log_reg, X_test, y_test, name=\"LogisticRegression\", ax=ax1)\n",
-    "plot_roc_curve(log_reg, X_test, y_test, name=\"LogisticRegression\", ax=ax2)"
+    "RocCurveDisplay.from_estimator(log_reg, X_test, y_test, name=\"LogisticRegression\", ax=ax1)\n",
+    "PrecisionRecallDisplay.from_estimator(log_reg, X_test, y_test, name=\"LogisticRegression\", ax=ax2)"
    ]
   },
   {
@@ -391,9 +408,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, ax = plt.subplots()\n",
-    "plot_precision_recall_curve(log_reg, X_test, y_test, ax=ax, name=\"Logistic Regression\")\n",
-    "plot_precision_recall_curve(rf, X_test, y_test, ax=ax, name=\"Random Forest\")"
+    "fig, ax = plt.subplots(figsize=(12, 8))\n",
+    "PrecisionRecallDisplay.from_estimator(log_reg, X_test, y_test, ax=ax, name=\"Logistic Regression\")\n",
+    "PrecisionRecallDisplay.from_estimator(rf, X_test, y_test, ax=ax, name=\"Random Forest\")"
    ]
   },
   {
@@ -404,8 +421,19 @@
     "\n",
     "1. Plot the roc curve of the logistic regression model and the random forest model on the same axes.\n",
     "2. Train a `sklearn.dummy.DummyClassifier(strategy='prior')` on the training dataset and plot the precision recall curve and the roc curve with the test dataset.\n",
+    "    - **Hint**: Plot on seperate axes `fig, (ax1, ax2) = plt.subplots(1, 2, figsize=(20, 8))`\n",
     "3. What is the ROC AUC and the average precision for the dummy classifer?\n",
-    "4. **Extra**: Compute the f1 score for three models we have trained so far. While model performs the best according to the f1 score? **Hint:** `f1_score` is in `sklearn.metrics`"
+    "4. **Extra**: Compute the f1 score for three models we have trained so far with the test set. While model performs the best according to the f1 score?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.dummy import DummyClassifier\n",
+    "from sklearn.metrics import f1_score"
    ]
   },
   {
@@ -560,8 +588,19 @@
    "source": [
     "## Exercise 3\n",
     "\n",
-    "1. Compute the `roc_auc_score` for the random forest. **Hint**: Use `predict_proba`.\n",
+    "1. Compute the `roc_auc_score` for the random forest on the test set. **Hint**: Use `predict_proba`.\n",
     "2. Train a `sklearn.svm.SVC` model on the training datast and compute the average precision. **Hint**: Use `decision_function`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import roc_auc_score\n",
+    "from sklearn.metrics import average_precision_score\n",
+    "from sklearn.svm import SVC"
    ]
   },
   {
@@ -624,7 +663,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.metrics import plot_confusion_matrix"
+    "from sklearn.metrics import ConfusionMatrixDisplay"
    ]
   },
   {
@@ -633,7 +672,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_confusion_matrix(rf, X_test, y_test, cmap='gray_r')"
+    "ConfusionMatrixDisplay.from_estimator(rf, X_test, y_test, cmap='gray_r')"
    ]
   },
   {
@@ -705,10 +744,10 @@
    "source": [
     "from sklearn.linear_model import Ridge\n",
     "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.datasets import load_boston\n",
+    "from sklearn.datasets import fetch_california_housing\n",
     "\n",
-    "boston = load_boston()\n",
-    "X, y = boston.data, boston.target\n",
+    "housing = fetch_california_housing(as_frame=True)\n",
+    "X, y = housing.data, housing.target\n",
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(\n",
     "    X, y, random_state=42)"
@@ -803,7 +842,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "## Prediction plots"
    ]
@@ -835,7 +876,7 @@
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots()\n",
-    "ax.hist(delta, bins=30)\n",
+    "ax.hist(delta, bins=40)\n",
     "ax.set(xlabel=\"y_true - predicted\", ylabel=\"Counts\");"
    ]
   },
@@ -847,6 +888,18 @@
     "\n",
     "1. Train a random forest regressor on the training dataset.\n",
     "2. Evaluate the random forest regressor on the test dataset and compare it to the ridge results with `r2_score`, `mean_sqaured_error`, `mean_absolute_error`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.metrics import r2_score\n",
+    "from sklearn.metrics import mean_squared_error\n",
+    "from sklearn.metrics import mean_absolute_error"
    ]
   },
   {
@@ -874,9 +927,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
-    "## Prediction plots per feature"
+    "## Prediction plots per feature (Extra)"
    ]
   },
   {
@@ -887,37 +942,6 @@
    "source": [
     "from sklearn.datasets import load_boston\n",
     "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X_df = pd.DataFrame(X, columns=boston.feature_names)\n",
-    "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(\n",
-    "    X_df, y, random_state=42)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ridge = make_pipeline(StandardScaler(), Ridge(random_state=42))\n",
-    "ridge.fit(X_train, y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ridge_pred = ridge.predict(X_test)"
    ]
   },
   {
@@ -952,11 +976,8 @@
     "columns = X_analysis.columns\n",
     "n_features = X.shape[1]\n",
     "\n",
-    "fig, axes = plt.subplots(3, 5, figsize=(20, 10), constrained_layout=True)\n",
+    "fig, axes = plt.subplots(2, 4, figsize=(24, 10), constrained_layout=True)\n",
     "for i, ax in enumerate(axes.ravel()):\n",
-    "    if i >= n_features:\n",
-    "        ax.set_visible(False)\n",
-    "        continue\n",
     "    sns.scatterplot(x=columns[i], y='delta', ax=ax, data=X_analysis)\n",
     "    ax.axhline(y=0, c='k', ls='--')"
    ]
