--- a/notebooks/02-model-calibration.ipynb
+++ b/notebooks/02-model-calibration.ipynb
@@ -50,29 +50,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def plot_calibration_curve(y_true, y_prob, n_bins=5, ax=None, hist=True, normalize=False):\n",
-    "    prob_true, prob_pred = calibration_curve(y_true, y_prob, n_bins=n_bins, normalize=normalize)\n",
-    "    if ax is None:\n",
-    "        ax = plt.gca()\n",
-    "    if hist:\n",
-    "        ax.hist(y_prob, weights=np.ones_like(y_prob) / len(y_prob), alpha=.4,\n",
-    "               bins=np.maximum(10, n_bins))\n",
-    "    ax.plot([0, 1], [0, 1], ':', c='k')\n",
-    "    curve = ax.plot(prob_pred, prob_true, marker=\"o\")\n",
-    "\n",
-    "    ax.set_xlabel(\"predicted probability\")\n",
-    "    ax.set_ylabel(\"fraction of positive samples\")\n",
-    "\n",
-    "    ax.set(aspect='equal')\n",
-    "    return curve"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -88,10 +65,10 @@
     "from sklearn.datasets import make_classification\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "X, y = make_classification(n_samples=10000, n_features=20,\n",
-    "                           n_informative=2, n_redundant=2)\n",
+    "X, y = make_classification(n_samples=5000, n_features=20,\n",
+    "                           n_informative=4, n_redundant=4)\n",
     "\n",
-    "train_samples = 100  # Samples used for training the models\n",
+    "train_samples = 1000  # Samples used for training the models\n",
     "\n",
     "X_train = X[:train_samples]\n",
     "X_test = X[train_samples:]\n",
@@ -163,7 +140,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_calibration_curve(y_test, lr_proba[:, 1]);"
+    "from sklearn.calibration import CalibrationDisplay"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "CalibrationDisplay.from_estimator(lr, X_test, y_test, n_bins=5)"
    ]
   },
   {
@@ -190,12 +176,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, (ax1, ax2, ax3) = plt.subplots(1, 3, figsize=(20, 8))\n",
-    "plot_calibration_curve(y_test, lr_proba[:, 1], n_bins=5, ax=ax1)\n",
+    "fig, (ax1, ax2, ax3) = plt.subplots(1, 3, figsize=(24, 8))\n",
+    "CalibrationDisplay.from_estimator(lr, X_test, y_test, n_bins=5, ax=ax1)\n",
     "ax1.set_title(\"n_bins=5\")\n",
-    "plot_calibration_curve(y_test, lr_proba[:, 1], n_bins=10, ax=ax2)\n",
+    "CalibrationDisplay.from_estimator(lr, X_test, y_test, n_bins=10, ax=ax2)\n",
     "ax2.set_title(\"n_bins=10\")\n",
-    "plot_calibration_curve(y_test, lr_proba[:, 1], n_bins=30, ax=ax3)\n",
+    "CalibrationDisplay.from_estimator(lr, X_test, y_test, n_bins=30, ax=ax3)\n",
     "ax3.set_title(\"n_bins=30\")"
    ]
   },
@@ -295,12 +281,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, (ax1, ax2, ax3) = plt.subplots(1, 3, figsize=(20, 8))\n",
-    "plot_calibration_curve(y_test, lr_proba[:, 1], n_bins=10, ax=ax1)\n",
+    "fig, (ax1, ax2, ax3) = plt.subplots(1, 3, figsize=(24, 8))\n",
+    "CalibrationDisplay.from_estimator(lr, X_test, y_test, n_bins=10, ax=ax1)\n",
     "ax1.set_title(f\"LogisticRegression: {lr_brier:0.4f}\")\n",
-    "plot_calibration_curve(y_test, tree_proba[:, 1], n_bins=10, ax=ax2)\n",
+    "CalibrationDisplay.from_estimator(tree, X_test, y_test, n_bins=10, ax=ax2)\n",
     "ax2.set_title(f\"DecisionTreeClassifier: {tree_brier:0.4f}\")\n",
-    "plot_calibration_curve(y_test, rf_proba[:, 1], n_bins=10, ax=ax3)\n",
+    "CalibrationDisplay.from_estimator(rf, X_test, y_test, n_bins=10, ax=ax3)\n",
     "ax3.set_title(f\"RandomForestClassifier: {rf_brier:0.4f}\");"
    ]
   },
@@ -310,9 +296,18 @@
    "source": [
     "## Exercise 1\n",
     "\n",
-    "1. Train a `sklearn.naive_bayes.GaussianNB` on the training set.\n",
-    "2. Compute the brier score loss on the test set for the `GuassianNB`.\n",
+    "1. Train a `HistGradientBoostingClassifier` on the training set.\n",
+    "2. Compute the brier score loss on the test set for the `HistGradientBoostingClassifier`.\n",
     "3. Plot the calibration curve with `n_bins=10`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import HistGradientBoostingClassifier"
    ]
   },
   {
@@ -360,8 +355,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rf = RandomForestClassifier(random_state=0)\n",
-    "cal_rf = CalibratedClassifierCV(rf, method=\"isotonic\")\n",
+    "inner_rf = RandomForestClassifier(random_state=0)\n",
+    "cal_rf = CalibratedClassifierCV(inner_rf, method=\"isotonic\")\n",
     "cal_rf.fit(X_train, y_train)"
    ]
   },
@@ -389,10 +384,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, (ax1, ax2) = plt.subplots(1, 2)\n",
-    "plot_calibration_curve(y_test, rf_proba[:, 1], ax=ax1, n_bins=10)\n",
-    "ax1.set_title(f\"forest no calibration: {rf_brier:0.4f}\")\n",
-    "plot_calibration_curve(y_test, cal_rf_proba[:, 1], ax=ax2, n_bins=10)\n",
+    "fig, (ax1, ax2) = plt.subplots(1, 2, figsize=(20, 8))\n",
+    "CalibrationDisplay.from_estimator(rf, X_test, y_test, ax=ax1, n_bins=10)\n",
+    "ax1.set_title(f\"forest without calibration: {rf_brier:0.4f}\")\n",
+    "CalibrationDisplay.from_estimator(cal_rf, X_test, y_test, ax=ax2, n_bins=10)\n",
     "ax2.set_title(f\"calibrated: {cal_rf_brier:0.4f}\");"
    ]
   },
@@ -409,8 +404,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lr = make_pipeline(StandardScaler(), LogisticRegression(random_state=42))\n",
-    "cal_lr = CalibratedClassifierCV(lr, method='isotonic')\n",
+    "inner_lr = make_pipeline(StandardScaler(), LogisticRegression(random_state=42))\n",
+    "cal_lr = CalibratedClassifierCV(inner_lr, method='isotonic')\n",
     "cal_lr.fit(X_train, y_train)"
    ]
   },
@@ -431,10 +426,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, (ax1, ax2) = plt.subplots(1, 2)\n",
-    "plot_calibration_curve(y_test, lr_proba[:, 1], ax=ax1, n_bins=10)\n",
-    "ax1.set_title(f\"no calibration: {lr_brier:0.4f}\")\n",
-    "plot_calibration_curve(y_test, cal_lr_proba[:, 1], ax=ax2, n_bins=10)\n",
+    "fig, (ax1, ax2) = plt.subplots(1, 2, figsize=(20, 8))\n",
+    "CalibrationDisplay.from_estimator(lr, X_test, y_test, ax=ax1, n_bins=10)\n",
+    "ax1.set_title(f\"Logistic without calibration: {lr_brier:0.4f}\")\n",
+    "CalibrationDisplay.from_estimator(cal_lr, X_test, y_test, ax=ax2, n_bins=10)\n",
     "ax2.set_title(f\"calibrated: {cal_lr_brier:0.4f}\");"
    ]
   },
@@ -444,11 +439,21 @@
    "source": [
     "## Exercise 2\n",
     "\n",
-    "0. Finish Exercise 1 for training an uncalibrated `GaussianNB`.\n",
-    "1. Calibrate the `sklearn.naive_bayes.GaussianNB` on the training set.\n",
+    "0. Finish Exercise 1 for training an uncalibrated `HistGradientBoostingClassifier`.\n",
+    "1. Calibrate the `HistGradientBoostingClassifier` on the training set. (This can take a little longer)\n",
     "2. Compute the brier score loss on the test set.\n",
     "3. Plot the calibration curve with `n_bins=10`.\n",
-    "4. Did the calibration improve with `CalibratedClassifierCV`?"
+    "4. Did the calibration improve with `CalibratedClassifierCV`?\n",
+    "5. **Extra**: Try to use `log_loss` to compare calibration."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import log_loss"
    ]
   },
   {
