ENH Update slides and notebooks

--- a/notebooks/01-model-evaluation.ipynb
+++ b/notebooks/01-model-evaluation.ipynb
@@ -842,28 +842,6 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "## Prediction plots"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig, ax = plt.subplots()\n",
-    "delta = y_test - ridge_pred\n",
-    "ax.plot(ridge_pred, delta, 'o', alpha=0.5)\n",
-    "ax.axhline(y=0, c='k', ls='--')\n",
-    "ax.set(xlabel='predicted', ylabel='y_true - predicited', aspect='equal');"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Prediction plots histogram"
@@ -876,6 +854,7 @@
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots()\n",
+    "delta = y_test - ridge_pred\n",
     "ax.hist(delta, bins=40)\n",
     "ax.set(xlabel=\"y_true - predicted\", ylabel=\"Counts\");"
    ]
@@ -884,7 +863,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exercise 4\n",
+    "## Exercise 4 (Extra)\n",
     "\n",
     "1. Train a random forest regressor on the training dataset.\n",
     "2. Evaluate the random forest regressor on the test dataset and compare it to the ridge results with `r2_score`, `mean_sqaured_error`, `mean_absolute_error`."
