--- a/notebooks/02-model-calibration.ipynb
+++ b/notebooks/02-model-calibration.ipynb
@@ -441,19 +441,8 @@
     "\n",
     "0. Finish Exercise 1 for training an uncalibrated `HistGradientBoostingClassifier`.\n",
     "1. Calibrate the `HistGradientBoostingClassifier` on the training set. (This can take a little longer)\n",
-    "2. Compute the brier score loss on the test set.\n",
     "3. Plot the calibration curve with `n_bins=10`.\n",
-    "4. Did the calibration improve with `CalibratedClassifierCV`?\n",
-    "5. **Extra**: Try to use `log_loss` to compare calibration."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.metrics import log_loss"
+    "4. Did the calibration improve with `CalibratedClassifierCV`?"
    ]
   },
   {
