--- a/notebooks/03-model-inspection.ipynb
+++ b/notebooks/03-model-inspection.ipynb
@@ -333,7 +333,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "## Random Forest"
    ]
@@ -422,8 +424,7 @@
    "source": [
     "from sklearn.inspection import permutation_importance\n",
     "\n",
-    "rf_perm_results = permutation_importance(rf, X_test, y_test,\n",
-    "                                         n_repeats=5, n_jobs=-1)"
+    "rf_perm_results = permutation_importance(rf, X_test, y_test, n_repeats=5, n_jobs=-1)"
    ]
   },
   {
@@ -484,231 +485,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Load cancer dataset"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.datasets import load_breast_cancer\n",
-    "\n",
-    "data = load_breast_cancer()\n",
-    "X, y = data.data, data.target\n",
-    "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, stratify=y, random_state=42)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.ensemble import RandomForestClassifier\n",
-    "\n",
-    "rf = RandomForestClassifier(random_state=42)\n",
-    "rf.fit(X_train, y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rf.score(X_test, y_test)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Permutation importance with random forest"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.inspection import permutation_importance\n",
-    "\n",
-    "rf_result = permutation_importance(rf, X_train, y_train,\n",
-    "                                   n_repeats=10, n_jobs=-1)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Training data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "_ = plot_permutation_importance(rf_result, data.feature_names)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {
     "tags": []
    },
-   "source": [
-    "#### Most features are not useful?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from scipy.stats import spearmanr\n",
-    "from scipy.cluster import hierarchy\n",
-    "from scipy.spatial import distance\n",
-    "\n",
-    "corr = spearmanr(X_train).correlation\n",
-    "corr_distance = 1 - np.abs((corr + corr.T) / 2)\n",
-    "np.fill_diagonal(corr_distance, 0.0)\n",
-    "corr_linkage = hierarchy.ward(distance.squareform(corr_distance))\n",
-    "\n",
-    "fig, ax = plt.subplots(figsize=(18, 12))\n",
-    "dendro = hierarchy.dendrogram(\n",
-    "    corr_linkage, labels=data.feature_names.tolist(),\n",
-    "    orientation='right', ax=ax)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig, ax = plt.subplots()\n",
-    "dendro_idx = np.arange(0, len(dendro['ivl']))\n",
-    "\n",
-    "ax.imshow(corr[dendro['leaves'], :][:, dendro['leaves']], cmap='viridis')\n",
-    "ax.set_xticks(dendro_idx)\n",
-    "ax.set_yticks(dendro_idx)\n",
-    "ax.set_xticklabels(dendro['ivl'], rotation='vertical')\n",
-    "ax.set_yticklabels(dendro['ivl']);"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Manutally pick a threshold based on visual inspection of the dendrogram to group faetures."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "from collections import defaultdict\n",
-    "\n",
-    "cluster_ids = hierarchy.fcluster(corr_linkage, 1, criterion='distance')\n",
-    "cluster_id_to_feature_ids = defaultdict(list)\n",
-    "for idx, cluster_id in enumerate(cluster_ids):\n",
-    "    cluster_id_to_feature_ids[cluster_id].append(idx)\n",
-    "selected_features = [v[0] for v in cluster_id_to_feature_ids.values()]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Number of selected features:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len(selected_features)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X_train_sel = X_train[:, selected_features]\n",
-    "X_test_sel = X_test[:, selected_features]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rf_sel = RandomForestClassifier(random_state=42)\n",
-    "rf_sel.fit(X_train_sel, y_train)\n",
-    "print(\"Accuracy on test data with features removed: {:.2f}\".format(\n",
-    "      rf_sel.score(X_test_sel, y_test)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(\"Accuracy on test data with features removed: {:.2f}\".format(\n",
-    "      rf.score(X_test, y_test)))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Feature importance with selected features"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.inspection import permutation_importance\n",
-    "\n",
-    "rf_sel_result = permutation_importance(\n",
-    "    rf_sel, X_test_sel, y_test, n_repeats=30, n_jobs=-1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "features_sel = data.feature_names[selected_features]\n",
-    "_ = plot_permutation_importance(rf_sel_result, features_sel)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Partial Dependence"
    ]
@@ -726,7 +505,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.ensemble import HistGradientBoostingClassifier "
+    "from sklearn.ensemble import HistGradientBoostingRegressor "
    ]
   },
   {
@@ -735,8 +514,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hist = HistGradientBoostingClassifier(random_state=0)\n",
-    "hist.fit(X_train_sel, y_train)"
+    "hist = HistGradientBoostingRegressor(random_state=0)\n",
+    "hist.fit(X_train, y_train)"
    ]
   },
   {
@@ -745,7 +524,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hist.score(X_test_sel, y_test)"
+    "hist.score(X_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Get permutation importances"
    ]
   },
   {
@@ -754,7 +540,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.inspection import PartialDependenceDisplay"
+    "hist_perm_results = permutation_importance(hist, X_test, y_test, n_repeats=5, random_state=0)"
    ]
   },
   {
@@ -763,13 +549,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "top_features = features_sel[:2].tolist()\n",
-    "bottom_features = features_sel[-2:].tolist()\n",
+    "feature_importance_ranking = hist_perm_results.importances_mean.argsort()\n",
+    "hist_top_2 = feature_importance_ranking[-2:]\n",
+    "hist_bottom_2 = feature_importance_ranking[:2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "features = X_test.columns[np.concatenate((hist_top_2, hist_bottom_2))]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Plot Partial Dependence"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.inspection import PartialDependenceDisplay\n",
     "PartialDependenceDisplay.from_estimator(\n",
-    "    hist, X_train_sel,\n",
-    "    features=top_features + bottom_features,\n",
-    "    feature_names=features_sel,\n",
-    "    n_cols=2)"
+    "    hist, X_test, features=features, n_cols=2)"
    ]
   },
   {
@@ -780,7 +589,7 @@
    "source": [
     "## Exercise 3\n",
     "\n",
-    "1. Load the boston dataset using `fetch_openml` with `data_id=531` and `as_frame=True`\n",
+    "1. Dataset using `fetch_openml` with `data_id=531` and `as_frame=True`\n",
     "1. Split the data into a training and test set.\n",
     "1. Train a `HistGradientBoostingRegressor` on the training set and evalute on the test set.\n",
     "1. What are the 4 most important features according to permutation importance on the test set?\n",
@@ -793,8 +602,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.datasets import fetch_openml\n",
-    "from sklearn.ensemble import HistGradientBoostingRegressor"
+    "from sklearn.datasets import fetch_openml"
    ]
   },
   {
