ENH Update notebooks

--- a/notebooks/01-model-evaluation.ipynb
+++ b/notebooks/01-model-evaluation.ipynb
@@ -246,6 +246,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Back to slides!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Thresholds"
    ]
   },
@@ -483,6 +490,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Anything above 0 is considered class 1:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -624,6 +638,13 @@
    "outputs": [],
    "source": [
     "# %load solutions/01-ex03-solutions.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Back to slides"
    ]
   },
   {
