--- a/notebooks/02-model-calibration.ipynb
+++ b/notebooks/02-model-calibration.ipynb
@@ -296,8 +296,8 @@
    "source": [
     "## Exercise 1\n",
     "\n",
-    "1. Train a `HistGradientBoostingClassifier` on the training set.\n",
-    "2. Compute the brier score loss on the test set for the `HistGradientBoostingClassifier`.\n",
+    "1. Train a `GradientBoostingClassifier` on the training set.\n",
+    "2. Compute the brier score on the test set for the `GradientBoostingClassifier`.\n",
     "3. Plot the calibration curve with `n_bins=10`."
    ]
   },
@@ -307,7 +307,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.ensemble import HistGradientBoostingClassifier"
+    "from sklearn.ensemble import GradientBoostingClassifier"
    ]
   },
   {
@@ -439,10 +439,11 @@
    "source": [
     "## Exercise 2\n",
     "\n",
-    "0. Finish Exercise 1 for training an uncalibrated `HistGradientBoostingClassifier`.\n",
-    "1. Calibrate the `HistGradientBoostingClassifier` on the training set. (This can take a little longer)\n",
-    "3. Plot the calibration curve with `n_bins=10`.\n",
-    "4. Did the calibration improve with `CalibratedClassifierCV`?"
+    "0. Finish Exercise 1 for training an uncalibrated `GradientBoostingClassifier`.\n",
+    "1. Calibrate the `GradientBoostingClassifier` on the training set. (This can take a little longer)\n",
+    "2. Compute the brier score on the test set.\n",
+    "2. Plot the calibration curve with `n_bins=10` for the calibrated and uncalibrated `GradientBoostingClassifier`, next to each other.\n",
+    "3. Did the calibration improve with `CalibratedClassifierCV`?"
    ]
   },
   {
