--- a/notebooks/03-model-inspection.ipynb
+++ b/notebooks/03-model-inspection.ipynb
@@ -406,6 +406,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Back to slides!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Permutation Feature Importance"
    ]
   },
@@ -550,8 +557,8 @@
    "outputs": [],
    "source": [
     "feature_importance_ranking = hist_perm_results.importances_mean.argsort()\n",
-    "hist_top_2 = feature_importance_ranking[-2:]\n",
-    "hist_bottom_2 = feature_importance_ranking[:2]"
+    "hist_top_2 = feature_importance_ranking[-2:].tolist()\n",
+    "hist_bottom_2 = feature_importance_ranking[:2].tolist()"
    ]
   },
   {
@@ -560,7 +567,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "features = X_test.columns[np.concatenate((hist_top_2, hist_bottom_2))]"
+    "features = hist_top_2 + hist_bottom_2"
    ]
   },
   {
